--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
             <div class="col-md-10 col-md-offset-3">
                 <p>
                     <img src="img/ResumeLogo.svg">
-                    <button type="button" class="btn btn-default btn-md">RESUME</button>
+                    <a type="button" class="btn btn-default btn-md" href="img/resume.pdf" target="_blank"><i class="fa  fa-file-pdf-o fa-bl"></i> RESUME </a>
 
                     <a class="btn-group btn-group-sm" href="https://twitter.com/annawlies"><i class="fa fa-twitter fa"></i></a>
                     <a class="btn-group btn-group-sm" href="https://www.facebook.com/anna.lai.9"><i class="fa fa-facebook fa"></i></a>
