--- a/studio-art.html
+++ b/studio-art.html
@@ -23,7 +23,6 @@
     <![endif]-->
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -62,20 +61,121 @@
 
 </div>
 
-
+<body>
 <!--Studio Art-->
-<header id="studio-art" class="container content-section">
-    <div class = "container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1 text-center">
-                <h2>Portfolio</h2>
-            </div>
+
+<!-- Page Content -->
+<div class="container">
+
+    <!-- Page Header -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Portfolio
+                <small>Studio Art</small>
+            </h1>
         </div>
     </div>
-</header>
+    <!-- /.row -->
+
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/A Laugh.jpg">
+                <img class="img-responsive" src="img/portfolio/A Laugh.jpg" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/A Laugh.jpg">A Laugh</a>
+            </h3>
+            <p>Acryllic </p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Blossom.JPG">
+                <img class="img-responsive" src="img/portfolio/Blossom.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Blossom.JPG">Blossom</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Duet.JPG">
+                <img class="img-responsive" src="img/portfolio/Duet.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Duet.JPG">Duet</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Higgins.JPG">
+                <img class="img-responsive" src="img/portfolio/Higgins.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Higgins.JPG">Higgins</a>
+            </h3>
+            <p>Pencil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/In%20Retrospect.JPG">
+                <img class="img-responsive" src="img/portfolio/In%20Retrospect.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/In%20Retrospect.JPG">In Retrospect</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Lazy%20Day.JPG">
+                <img class="img-responsive" src="img/portfolio/Lazy%20Day.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Lazy%20Day.JPG">Lazy Day</a>
+            </h3>
+            <p>Charcoal</p>
+        </div>
+    </div>
+
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Round%20'Em%20Up.JPG">
+                <img class="img-responsive" src="img/portfolio/Round%20'Em%20Up.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Round%20'Em%20Up.JPG">Round 'Em Up</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/The%20Riding%20Lesson.JPG">
+                <img class="img-responsive" src="img/portfolio/The%20Riding%20Lesson.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/The%20Riding%20Lesson.JPG">The Riding Lesson</a>
+            </h3>
+            <p>Colored Pencil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/The%20Weaving%20Loom.JPG">
+                <img class="img-responsive" src="img/portfolio/The%20Weaving%20Loom.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/The%20Weaving%20Loom.JPG">Loom</a>
+            </h3>
+            <p>Mixed Media</p>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <hr>
 
 
-            <!-- Footer -->
+    <!-- Footer -->
 <footer>
     <div class="container text-center">
         <p> © Anna Lai 2015</p>
