--- a/studio-art.html
+++ b/studio-art.html
@@ -80,11 +80,11 @@
     <!-- Projects Row -->
     <div class="row">
         <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/A Laugh.jpg">
-                <img class="img-responsive" src="img/portfolio/A Laugh.jpg" alt="">
+            <a href="img/portfolio/A%20Laugh.JPG"">
+                <img class="img-responsive" src="img/portfolio/A%20Laugh.JPG" alt="">
             </a>
             <h3>
-                <a href="img/portfolio/A Laugh.jpg">A Laugh</a>
+                <a href="img/portfolio/A%20Laugh.JPG">A Laugh</a>
             </h3>
             <p>Acryllic </p>
         </div>
