--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <![endif]-->
   </head>
 
-  <body>
+  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top">
@@ -42,15 +42,14 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                  <li><a href="about.html">About</a></li>
+                  <li><a href="#about">About</a></li>
                   <li class="dropdown">
                       <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Portfolio
-                          <span class="caret"></span>
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                          <li><a href="studio-art.html">Studio Art</a></li>
-                          <li><a href="other-projects.html">Other Projects</a></li>
+                          <li><a href="#studio-art">Studio Art</a></li>
+                          <li><a href="#studio-art">Other Projects</a></li>
                       </ul>
                   </li>
               </ul>
@@ -74,10 +73,157 @@
       </div>
   </header>
 
+  <!--About Me-->
+  <section id = "about" class="section">
+   <div class = "container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2>ABOUT</h2>
+                <img class="profile-image-sm img-circle" src="img/profile.jpg" height="250" width="250"></img>
+                <div class="col-md-12">
+                    <a href="http://www.stanford.edu/">
+                        <img src="img/AboutLogo.svg">
+                    </a>
+                    <a href="#studio-art">
+                        <img src="img/ArtLogo.svg">
+                    </a>
+                    <a href="img/resume.pdf">
+                        <img src="img/ResumeLogo.svg">
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+  </section>
+
+<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+
+</div>
+
+<body>
+<!--Studio Art-->
+
+<!-- Page Content -->
+<section id="studio-art">
+<div class="container">
+    <!-- Page Header -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Studio Art
+            </h1>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/A%20Laugh.JPG">
+                <img class="img-responsive" src="img/portfolio/A%20Laugh.JPG" alt=" ">
+            </a>
+            <h3>
+                <a href="img/portfolio/A%20Laugh.JPG">A Laugh</a>
+            </h3>
+            <p>Acryllic </p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Blossom.JPG">
+                <img class="img-responsive" src="img/portfolio/Blossom.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Blossom.JPG">Blossom</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Duet.JPG">
+                <img class="img-responsive" src="img/portfolio/Duet.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Duet.JPG">Duet</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Higgins.JPG">
+                <img class="img-responsive" src="img/portfolio/Higgins.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Higgins.JPG">Higgins</a>
+            </h3>
+            <p>Pencil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/In%20Retrospect.JPG">
+                <img class="img-responsive" src="img/portfolio/In%20Retrospect.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/In%20Retrospect.JPG">In Retrospect</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Lazy%20Day.JPG">
+                <img class="img-responsive" src="img/portfolio/Lazy%20Day.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Lazy%20Day.JPG">Lazy Day</a>
+            </h3>
+            <p>Charcoal</p>
+        </div>
+    </div>
+
+    <!-- Projects Row -->
+    <div class="row">
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/Round%20'Em%20Up.JPG">
+                <img class="img-responsive" src="img/portfolio/Round%20'Em%20Up.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/Round%20'Em%20Up.JPG">Round 'Em Up</a>
+            </h3>
+            <p>Oil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/The%20Riding%20Lesson.JPG">
+                <img class="img-responsive" src="img/portfolio/The%20Riding%20Lesson.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/The%20Riding%20Lesson.JPG">The Riding Lesson</a>
+            </h3>
+            <p>Colored Pencil</p>
+        </div>
+        <div class="col-md-4 portfolio-item">
+            <a href="img/portfolio/The%20Weaving%20Loom.JPG">
+                <img class="img-responsive" src="img/portfolio/The%20Weaving%20Loom.JPG" alt="">
+            </a>
+            <h3>
+                <a href="img/portfolio/The%20Weaving%20Loom.JPG">Loom</a>
+            </h3>
+            <p>Mixed Media</p>
+        </div>
+    </div>
+    <!-- /.row -->
+ </div>
+</div>
+</section>
+
   <!-- Footer -->
   <footer>
       <div class="container text-center">
           <p> © Anna Lai 2015</p>
+          <a class="btn-group">
+              <a href="https://twitter.com/annawlies"><i class="fa fa-twitter fa"></i></a>
+              <a href="https://www.facebook.com/anna.lai.9"><i class="fa fa-facebook fa"></i></a>
+              <a href="https://instagram.com/anna_lies/"><i class="fa fa-instagram fa"></i></a>
+              <a href="https://www.linkedin.com/pub/anna-lai/77/180/11a"><i class="fa fa-linkedin fa"></i></a>
+          </a>
       </div>
   </footer>
 
