--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
    <div class = "container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2>ABOUT</h2>
+                <h1>ABOUT</h1>
                 <img class="profile-image-sm img-circle" src="img/profile.jpg" height="250" width="250"></img>
                 <div class="col-md-12">
                     <a href="http://www.stanford.edu/">
@@ -96,10 +96,7 @@
         </div>
     </div>
   </section>
-
-<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-
-</div>
+  
 
 <body>
 <!--Studio Art-->
@@ -107,11 +104,12 @@
 <!-- Page Content -->
 <section id="studio-art">
 <div class="container">
+
     <!-- Page Header -->
     <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Studio Art
-            </h1>
+        <div class="col-md-12 text-center">
+            <h1 class="page-header">PORTFOLIO</h1>
+            <h1><small>Studio Art</small></h1>
         </div>
     </div>
     <!-- /.row -->
@@ -124,27 +122,30 @@
             </a>
             <h3>
                 <a href="img/portfolio/A%20Laugh.JPG">A Laugh</a>
+                <small>Acryllic </small>
             </h3>
-            <p>Acryllic </p>
         </div>
+
         <div class="col-md-4 portfolio-item">
             <a href="img/portfolio/Blossom.JPG">
                 <img class="img-responsive" src="img/portfolio/Blossom.JPG" alt="">
             </a>
             <h3>
                 <a href="img/portfolio/Blossom.JPG">Blossom</a>
+                <small>Oil</small>
             </h3>
-            <p>Oil</p>
         </div>
+
         <div class="col-md-4 portfolio-item">
             <a href="img/portfolio/Duet.JPG">
                 <img class="img-responsive" src="img/portfolio/Duet.JPG" alt="">
             </a>
             <h3>
                 <a href="img/portfolio/Duet.JPG">Duet</a>
+                <small>Oil</small>
             </h3>
-            <p>Oil</p>
         </div>
+
     </div>
     <!-- /.row -->
 
@@ -156,17 +157,18 @@
             </a>
             <h3>
                 <a href="img/portfolio/Higgins.JPG">Higgins</a>
+                <small>Pencil</small>
             </h3>
-            <p>Pencil</p>
         </div>
+
         <div class="col-md-4 portfolio-item">
             <a href="img/portfolio/In%20Retrospect.JPG">
                 <img class="img-responsive" src="img/portfolio/In%20Retrospect.JPG" alt="">
             </a>
             <h3>
                 <a href="img/portfolio/In%20Retrospect.JPG">In Retrospect</a>
+                <small>Oil</small>
             </h3>
-            <p>Oil</p>
         </div>
         <div class="col-md-4 portfolio-item">
             <a href="img/portfolio/Lazy%20Day.JPG">
@@ -174,8 +176,8 @@
             </a>
             <h3>
                 <a href="img/portfolio/Lazy%20Day.JPG">Lazy Day</a>
+                <small>Charcoal</small>
             </h3>
-            <p>Charcoal</p>
         </div>
     </div>
 
@@ -187,30 +189,32 @@
             </a>
             <h3>
                 <a href="img/portfolio/Round%20'Em%20Up.JPG">Round 'Em Up</a>
+                <small>Oil</small>
             </h3>
-            <p>Oil</p>
         </div>
+
         <div class="col-md-4 portfolio-item">
             <a href="img/portfolio/The%20Riding%20Lesson.JPG">
                 <img class="img-responsive" src="img/portfolio/The%20Riding%20Lesson.JPG" alt="">
             </a>
             <h3>
                 <a href="img/portfolio/The%20Riding%20Lesson.JPG">The Riding Lesson</a>
+                <small>Colored Pencil</small>
             </h3>
-            <p>Colored Pencil</p>
         </div>
+
         <div class="col-md-4 portfolio-item">
             <a href="img/portfolio/The%20Weaving%20Loom.JPG">
                 <img class="img-responsive" src="img/portfolio/The%20Weaving%20Loom.JPG" alt="">
             </a>
             <h3>
                 <a href="img/portfolio/The%20Weaving%20Loom.JPG">Loom</a>
+                <small>Mixed Media</small>
             </h3>
-            <p>Mixed Media</p>
         </div>
+
     </div>
     <!-- /.row -->
- </div>
 </div>
 </section>
 
