--- a/index.html
+++ b/index.html
@@ -1,240 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Anna Lai</title>
+<meta http-equiv="refresh" content="0; url=http://stanford.edu/~alai2/" />
 
-      <!-- Bootstrap -->
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-
-      <!-- Custom CSS -->
-      <link href="css/annalai.css" rel="stylesheet">
-
-      <!-- Custom Fonts -->
-      <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-      <![endif]-->
-  </head>
-
-  <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="index.html">Anna Lai</a>
-          </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse">
-              <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#about">About</a></li>
-                  <li class="dropdown">
-                      <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Portfolio
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                          <li><a href="#studio-art">Studio Art</a></li>
-                          <li><a href="#studio-art">Other Projects</a></li>
-                      </ul>
-                  </li>
-              </ul>
-          </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-  </nav>
-
-  <!--Home-->
-  <header class="jumbotron">
-      <div class="intro-body">
-          <div class="container">
-              <div class="row">
-                  <div class="col-xs-6 col-md-4 col-xs-offset-6 .col-md-offset-6">
-                      <h1 class="brand-heading">Hi!</h1>
-                      <h1 class="brand-heading">My name is Anna.</h1>
-                      <p class="intro-text">I make things sometimes.</p>
-                      </a>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </header>
-
-  <!--About Me-->
-  <section id = "about" class="section">
-   <div class = "container">
-        <div class="row">
-            <div class="col-md-12 text-center">
-                <h1>ABOUT</h1>
-                <img class="profile-image-sm img-circle" src="img/profile.jpg" height="250" width="250"></img>
-                <div class="col-md-12">
-                    <a href="http://www.stanford.edu/">
-                        <img src="img/AboutLogo.svg">
-                    </a>
-                    <a href="#studio-art">
-                        <img src="img/ArtLogo.svg">
-                    </a>
-                    <a href="img/resume.pdf">
-                        <img src="img/ResumeLogo.svg">
-                    </a>
-                </div>
-            </div>
-
-        </div>
-    </div>
-  </section>
-  
-
-<body>
-<!--Studio Art-->
-
-<!-- Page Content -->
-<section id="studio-art">
-<div class="container">
-
-    <!-- Page Header -->
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <h1 class="page-header">PORTFOLIO</h1>
-            <h1><small>Studio Art</small></h1>
-        </div>
-    </div>
-    <!-- /.row -->
-
-    <!-- Projects Row -->
-    <div class="row">
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/A%20Laugh.JPG">
-                <img class="img-responsive" src="img/portfolio/A%20Laugh.JPG" alt=" ">
-            </a>
-            <h3>
-                <a href="img/portfolio/A%20Laugh.JPG">A Laugh</a>
-                <small>Acryllic </small>
-            </h3>
-        </div>
-
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/Blossom.JPG">
-                <img class="img-responsive" src="img/portfolio/Blossom.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/Blossom.JPG">Blossom</a>
-                <small>Oil</small>
-            </h3>
-        </div>
-
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/Duet.JPG">
-                <img class="img-responsive" src="img/portfolio/Duet.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/Duet.JPG">Duet</a>
-                <small>Oil</small>
-            </h3>
-        </div>
-
-    </div>
-    <!-- /.row -->
-
-    <!-- Projects Row -->
-    <div class="row">
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/Higgins.JPG">
-                <img class="img-responsive" src="img/portfolio/Higgins.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/Higgins.JPG">Higgins</a>
-                <small>Pencil</small>
-            </h3>
-        </div>
-
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/In%20Retrospect.JPG">
-                <img class="img-responsive" src="img/portfolio/In%20Retrospect.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/In%20Retrospect.JPG">In Retrospect</a>
-                <small>Oil</small>
-            </h3>
-        </div>
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/Lazy%20Day.JPG">
-                <img class="img-responsive" src="img/portfolio/Lazy%20Day.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/Lazy%20Day.JPG">Lazy Day</a>
-                <small>Charcoal</small>
-            </h3>
-        </div>
-    </div>
-
-    <!-- Projects Row -->
-    <div class="row">
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/Round%20'Em%20Up.JPG">
-                <img class="img-responsive" src="img/portfolio/Round%20'Em%20Up.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/Round%20'Em%20Up.JPG">Round 'Em Up</a>
-                <small>Oil</small>
-            </h3>
-        </div>
-
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/The%20Riding%20Lesson.JPG">
-                <img class="img-responsive" src="img/portfolio/The%20Riding%20Lesson.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/The%20Riding%20Lesson.JPG">The Riding Lesson</a>
-                <small>Colored Pencil</small>
-            </h3>
-        </div>
-
-        <div class="col-md-4 portfolio-item">
-            <a href="img/portfolio/The%20Weaving%20Loom.JPG">
-                <img class="img-responsive" src="img/portfolio/The%20Weaving%20Loom.JPG" alt="">
-            </a>
-            <h3>
-                <a href="img/portfolio/The%20Weaving%20Loom.JPG">Loom</a>
-                <small>Mixed Media</small>
-            </h3>
-        </div>
-
-    </div>
-    <!-- /.row -->
-</div>
-</section>
-
-  <!-- Footer -->
-  <footer>
-      <div class="container text-center">
-          <p> © Anna Lai 2015</p>
-          <a class="btn-group">
-              <a href="https://twitter.com/annawlies"><i class="fa fa-twitter fa"></i></a>
-              <a href="https://www.facebook.com/anna.lai.9"><i class="fa fa-facebook fa"></i></a>
-              <a href="https://instagram.com/anna_lies/"><i class="fa fa-instagram fa"></i></a>
-              <a href="https://www.linkedin.com/pub/anna-lai/77/180/11a"><i class="fa fa-linkedin fa"></i></a>
-          </a>
-      </div>
-  </footer>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
-
-</html>
+<p><a href="http://stanford.edu/~alai2/">Redirect</a></p>
