--- a/index.html
+++ b/index.html
@@ -1,3 +1,57 @@
-<meta http-equiv="refresh" content="0; url=http://stanford.edu/~alai2/" />
+<!DOCTYPE HTML>
+<html>
+  <head>
+	  	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125810712-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-<p><a href="http://stanford.edu/~alai2/">Redirect</a></p>
+	  gtag('config', 'UA-125810712-1');
+	</script>
+
+    <title>Anna Lai</title>
+    <meta charset="utf-8" />
+    <!-- Search SEO -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Portfolio. Senior in Mechanical Engineering at Stanford University." />
+    <meta name="author" content="Anna Wei Lai" />
+    <meta name="keywords" content="anna, lai, anna lai, art, CAD, design, engineer, houston, machining, mechanical engineering, product, programming, research, stanford, stanford university"/>
+
+
+    <link rel="stylesheet" href="css/annalai.css" type="text/css"/>
+    <link rel="icon" type="image/png" href="" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+
+  </head>
+  <body>
+    <div id="main">
+      <h1 id="name">Hello, I'm Anna.</h1>
+      <p class="section" id="intro">
+        BS + MS in Mechanical Engineering at <a target=_blank href="https://www.stanford.edu/">Stanford University</a>. I love to <a target=_blank href="portfolio.html">make</a>. Sometimes I take <a target=_blank href="https://www.instagram.com/anna_lies"> photos</a> and <a target=_blank href="https://www.instagram.com/alaidesigns"> paint</a> pictures. <br><br>
+   
+      </p>
+      <ul class="section" id="links">
+        <span class="section-title">Links</span>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a target=_blank href="img/Res_AnnaLai.pdf">Resume</a></li>
+        <li><a target=_blank href="https://www.linkedin.com/in/annawlai/">LinkedIn</a></li>
+      </ul>
+
+      <ul class="last-section" id="work">
+        <span class="section-title">Work</span>
+        <li>2018-Present - <a target=_blank href="https://natron.energy/">Natron Energy</a></li>
+        <li>2019 - <a target=_blank href="https://www.chevron.com/">Chevron</a></li>
+        <li>2017 - <a target=_blank href="http://www.slb.com/">Schlumberger</a></li>
+        <li>2015-2017 - <a target=_blank href="http://web.stanford.edu/group/prakash-lab/cgi-bin/labsite/">Prakash Lab</a></li>
+<!--         <li>2013 - <a target=_blank href="http://www.daxwell.com/">Daxwell</a></li> -->
+      </ul>
+
+      <!-- <footer id="footer">v3.0.0 <span class="heart">♥</span> </footer> -->
+
+    </div>
+  <script>
+  	
+  </script></body>
+</html>
