small fix res, date format

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <ul class="last-section" id="work">
         <span class="section-title">Work</span>
-        <li>2018-Present - <a target=_blank href="https://natron.energy/">Natron Energy</a></li>
+        <li>Now  - <a target=_blank href="https://natron.energy/">Natron Energy</a></li>
         <li>2019 - <a target=_blank href="https://www.chevron.com/">Chevron</a></li>
         <li>2017 - <a target=_blank href="http://www.slb.com/">Schlumberger</a></li>
         <li>2015-2017 - <a target=_blank href="http://web.stanford.edu/group/prakash-lab/cgi-bin/labsite/">Prakash Lab</a></li>
