--- a/portfolio.html
+++ b/portfolio.html
@@ -91,8 +91,8 @@
         <div class="project-card art">
           <div class="project-images">
               <img src="img/eng/natron/iso.png" alt="" data-caption="BlueTray™ 4000 UL 1973 Listed cells, UL 9540A tested with no thermal runaway on cells or pack. Isometric View." loading="lazy">
-              <img src="img/eng/natron/top.png" alt="" data-caption="BlueTray™ 4000 Top View." loading="lazy"
-              <img src="img/eng/natron/1U.jpg" alt="" data-caption="1U Tray Photo" loading="lazy">
+              <img src="img/eng/natron/top.png" alt="" data-caption="BlueTray™ 4000 Top View." loading="lazy">
+              <img src="img/eng/natron/1U.jpeg" alt="" data-caption="1U Tray Photo" loading="lazy">
           </div>
           <div class="content">
             <h3><a target=_blank href="https://natron.energy/">Natron Energy</a></h3>
@@ -260,7 +260,7 @@
               <img src="img/art/3d/metal/stpatty.png" alt="" data-caption="Ring with bezel set stone" loading="lazy">
               <img src="img/art/3d/metal/egg.png" alt="" data-caption="Egg studs" loading="lazy">
               <img src="img/art/3d/metal/flora.png" alt="" data-caption="Flora pendants" loading="lazy">
-              <img src="img/art/3d/kirby.png" alt="" data-caption="Demon Kirby" loading="lazy">
+              <img src="img/art/3d/metal/kirby.png" alt="" data-caption="Demon Kirby" loading="lazy">
           </div>
           <div class="content">
             <h3>Metal</h3>
