--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <li><a target=_blank href="https://natron.energy/">Natron Energy</a> — 2018-2022</li>
         <li><a target=_blank href="https://www.chevron.com/">Chevron</a> — 2019</li>
         <li><a target=_blank href="http://www.slb.com/">Schlumberger</a> — 2017</li>
-        <li><a target=_blank href="https://prakashlab.stanford.edu//">Prakash Lab</a> — 2015-2017</li>
+        <li><a target=_blank href="https://prakashlab.stanford.edu/">Prakash Lab</a> — 2015-2017</li>
       </ul>
 
       <ul class="section" id="links">
