formatting, concise desc

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
               <img src="img/eng/me141/coolest.png" alt="Coolest" data-caption="For ME141: Alternative Energy Systems, our team was presented with the challenge of designing a thermal management system for a RC car powered by 3-cell LiFePO4 battery pack. Weights were carried up a hill using the car until the battery powering the car had drained, overheated to 55℃, or 10 minutes had elapsed. Our design incorporated active and passive cooling through use of fans, heat sinks, thermal paste, and Peltier coolers which kept the battery below 30℃ during operation." loading="lazy">
           </div>
           <div class="content">
-            <h3> ME141: Alternative Energy Systems </h3>
+            <h3>ME141: Alternative Energy Systems</h3>
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
           <div class="project-images">
               <img src="img/eng/me318/metropolitain.png" alt="MetroMaze" data-caption="I designed this maze of the Paris Metro. Material: 6061 Aluminum, Acrylic. Designed in Solidworks, G-code generated in HSMworks, machined on 3-axis CNC mill." loading="lazy">
               <img src="img/eng/me318/shell.png" alt="Shell" data-caption="Fibonacci Shell: Nautilus shell following the Fibonacci sequence designed in Solidworks, G-code generated in HSMworks, machined in 4027 Aluminum on 3-axis CNC mill and glass bead blasted to finish. " loading="lazy">
-              <img src="img/eng/me318/hua.png" alt="Hua" data-caption="Hua Bottle Opener: A bottle opener inspired by the story of Hua Mulan. Machined in 316 stainless steel, the bottle opener captures the strength of Mulan in contrast to the delicate Mongolia (木兰) flower her name represents. After becoming a war hero, Mulan chooses to return to her family. To reflect this I chose to use her family name, Hua (花), which naturally evolves into the head of the bottle opener and touches on how the story’s interpretation has changed overtime – from one of fulfilling filial duties to that of empowerment." loading="lazy">
+              <img src="img/eng/me318/hua.png" alt="Hua" data-caption="Hua Bottle Opener: A bottle opener inspired by the story of Hua Mulan. Machined in 316 stainless steel, the bottle opener captures the strength of Mulan in contrast to the delicate Mongolia (木兰) flower her name represents. After becoming a war hero, Mulan chooses to return to her family. Her family name, Hua (花), naturally evolves into the shape of the bottle opener and touches on how the story’s interpretation has changed overtime – from one of fulfilling filial duties to that of empowerment." loading="lazy">
           </div>
           <div class="content">
             <h3>ME318: Computer-Aided Product Creation (CNC Machining)</h3>
@@ -220,7 +220,7 @@
         <div class="project-card art">
           <div class="project-images">
               <img src="img/art/3d/ceramic/croc.png" alt="croc" data-caption="Hand built croc and jibbitz. Can hold a Roku TV remote." loading="lazy">
-              <img src="img/art/3d/ceramic/donut.png" alt="donut" data-caption="Wheel thrown donut and hand painted sprinkles and peach gloss glaze. Wall mountable." loading="lazy">
+              <img src="img/art/3d/ceramic/donut.png" alt="donut" data-caption="Wheel thrown donut, hand painted sprinkles, and a peach gloss glaze. Wall mountable." loading="lazy">
               <img src="img/art/3d/ceramic/moon.png" alt="moon" data-caption="Assorted moon jars." loading="lazy">
               <img src="img/art/3d/ceramic/calcifer.png" alt="calcifer" data-caption="Calcifer tea pot warmer. Wheel thrown and hand carved. Hand built and painted frying pan tea light holder." loading="lazy">
               <img src="img/art/3d/ceramic/matcha.png" alt="matcha" data-caption="Matcha bowls. Wheel thrown and hand painted." loading="lazy">
@@ -256,11 +256,11 @@
       <div class="projects">
         <div class="project-card art">
           <div class="project-images">
-              <img src="img/art/3d/metal/paprika.png" alt="" data-caption="Persimmon earrings" loading="lazy">
-              <img src="img/art/3d/metal/stpatty.png" alt="" data-caption="Ring with bezel set stone" loading="lazy">
-              <img src="img/art/3d/metal/egg.png" alt="" data-caption="Egg studs" loading="lazy">
-              <img src="img/art/3d/metal/flora.png" alt="" data-caption="Flora pendants" loading="lazy">
-              <img src="img/art/3d/metal/kirby.png" alt="" data-caption="Demon Kirby" loading="lazy">
+              <img src="img/art/3d/metal/paprika.png" alt="" data-caption="Persimmon earrings. Copper and Brass." loading="lazy">
+              <img src="img/art/3d/metal/stpatty.png" alt="" data-caption="Ring with bezel set stone. Silver." loading="lazy">
+              <img src="img/art/3d/metal/egg.png" alt="" data-caption="Egg studs. Silver and Brass." loading="lazy">
+              <img src="img/art/3d/metal/flora.png" alt="" data-caption="Flora pendants. Copper and Brass." loading="lazy">
+              <img src="img/art/3d/metal/kirby.png" alt="" data-caption="Demon Kirby. Copper." loading="lazy">
           </div>
           <div class="content">
             <h3>Metal</h3>
@@ -269,7 +269,7 @@
         </div>
       </div>
       <!-- /.row -->
-      <hr>
+
 
       <span class="section" id="work">2D</span>
       <br>
@@ -288,7 +288,7 @@
               <img src="img/art/2d/paint/carnet.png" alt="carnet" data-caption="Carnet de Voyage (2016-), Assorted watercolors from my travel sketchbooks." loading="lazy">
               <img src="img/art/2d/paint/sf.png" alt="sf" data-caption="SF en plein air (2024), Watercolor." loading="lazy">
               <img src="img/art/2d/paint/palacefa.png" alt="palaceaf" data-caption="Palace of Fine Arts SF (2021), Acrylic." loading="lazy">
-              <img src="img/art/2d/paint/tokyo.png" alt="skytree" data-caption="skytree:levels (2016), Exhibited at the Hume Center for Writing and Speaking at Stanford in 2019." loading="lazy">
+              <img src="img/art/2d/paint/tokyo.png" alt="skytree" data-caption="skytree:levels (2016), Watercolor, Exhibited at the Hume Center for Writing and Speaking at Stanford in 2019." loading="lazy">
               <img src="img/art/2d/paint/sthelens.png" alt="mtsthelens" data-caption="Mount Saint Helens (2023), Oil on Canvas board." loading="lazy">
           </div>
           <div class="content">
